Describe your change here

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="description" content="Free UCAT Verbal Reasoning trainer: speed reading, rapid recall and keyword scanning practice for UK medical and dental applicants. By The UKCAT People." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-    <title>The UKCAT People</title>
+    <title>The UKCAT People – UCAT Verbal Reasoning Trainer</title>
   </head>
   <body>
     <div id="root"></div>
