--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" href="/favicon.ico" sizes="any" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <meta name="theme-color" content="#1e293b" />
   <meta name="description"
-    content="Free UCAT Verbal Reasoning trainer: speed reading, rapid recall and keyword scanning practice for UK medical and dental applicants. By TheUKCATPeople." />
+    content="Free UCAT Skills Trainer: Verbal Reasoning, Decision Making and Quantitative Reasoning practice. Speed reading, syllogisms, mental maths and calculator drills. By TheUKCATPeople." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <meta http-equiv="Content-Security-Policy"
     content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://*.supabase.co https://*.supabase.net;" />
-  <title>TheUKCATPeople – UCAT Verbal Reasoning Trainer</title>
+  <title>TheUKCATPeople – Free UCAT Skills Trainer</title>
 </head>
 
 <body>
